# SuDokuL

SuDokuLVS2019/: CMakeLists.txt  make_vita.sh
SuDokuLVS2019/src/: include.h  text_objects.h
